// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Location Manual Scan Component Renders Error message with Invalid Location Name 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffffff",
      "flexDirection": "column",
      "marginBottom": 8,
      "paddingRight": 16,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="characters"
      autoCorrect={false}
      autoFocus={true}
      keyboardType="default"
      onChangeText={[Function]}
      onSubmitEditing={[Function]}
      placeholder="[missing \\"en.LOCATION.MANUAL_ENTRY_BUTTON\\" translation]"
      rejectResponderTermination={true}
      selectionColor="#0071e9"
      style={
        Object {
          "color": "#000000",
          "flex": 1,
          "paddingLeft": 10,
        }
      }
      underlineColorAndroid="transparent"
      value="Not a Location"
    />
    <IconButton
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      icon={
        <mockConstructor
          color="#9e9e9e"
          name="close"
          size={16}
        />
      }
      onPress={[Function]}
      radius={5}
      type={3}
      width={-1}
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#f5f5f5",
        "flexDirection": "row",
        "marginBottom": 5,
        "width": "95%",
      }
    }
  >
    <mockConstructor
      color="#ef5350"
      name="alert-circle"
      size={20}
    />
    <Text
      style={
        Object {
          "color": "#ef5350",
          "fontSize": 12,
          "paddingHorizontal": 5,
        }
      }
    >
      [missing "en.LOCATION.SCAN_LOCATION" translation]
    </Text>
  </View>
</View>
`;

exports[`Test Location Manual Scan Component Renders Manual Scan component with a Valid Section ID  1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffffff",
      "flexDirection": "column",
      "marginBottom": 8,
      "paddingRight": 16,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="characters"
      autoCorrect={false}
      autoFocus={true}
      keyboardType="default"
      onChangeText={[Function]}
      onSubmitEditing={[Function]}
      placeholder="[missing \\"en.LOCATION.MANUAL_ENTRY_BUTTON\\" translation]"
      rejectResponderTermination={true}
      selectionColor="#0071e9"
      style={
        Object {
          "color": "#000000",
          "flex": 1,
          "paddingLeft": 10,
        }
      }
      underlineColorAndroid="transparent"
      value="12345"
    />
    <IconButton
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      icon={
        <mockConstructor
          color="#9e9e9e"
          name="close"
          size={16}
        />
      }
      onPress={[Function]}
      radius={5}
      type={3}
      width={-1}
    />
  </View>
</View>
`;

exports[`Test Location Manual Scan Component Renders Manual Scan component with a Valid Section Name 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffffff",
      "flexDirection": "column",
      "marginBottom": 8,
      "paddingRight": 16,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="characters"
      autoCorrect={false}
      autoFocus={true}
      keyboardType="default"
      onChangeText={[Function]}
      onSubmitEditing={[Function]}
      placeholder="[missing \\"en.LOCATION.MANUAL_ENTRY_BUTTON\\" translation]"
      rejectResponderTermination={true}
      selectionColor="#0071e9"
      style={
        Object {
          "color": "#000000",
          "flex": 1,
          "paddingLeft": 10,
        }
      }
      underlineColorAndroid="transparent"
      value="ABCD1-2"
    />
    <IconButton
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      icon={
        <mockConstructor
          color="#9e9e9e"
          name="close"
          size={16}
        />
      }
      onPress={[Function]}
      radius={5}
      type={3}
      width={-1}
    />
  </View>
</View>
`;
